# Particle_Life_Simulator

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: basic_ci.yml
particle_life_simulator/: __init__.py  my_module.py  placeholder-gui.py  placeholder_gui.py
tests/: test_my_module.py
